# truthbyte

./: .gitignore  CMakeLists.txt  truthbyte.sh
include/truthbyte/: commands.h  hash.h
src/: .gitignore  commands.c  commands.h  hash.c  hash.h  main.c
